# temp_cam

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
sdk/i3SdkSampleApp/: DataConversion.cpp  DataConversion.h  DlgFullScr.cpp  DlgFullScr.h  DlgScanInfo.cpp  DlgScanInfo.h  DlgTypeA.cpp  DlgTypeA.h  DlgTypeB.cpp  DlgTypeB.h  Dll_TestProgram.aps  ReadMe.txt  StaticDisp.cpp  StaticDisp.h  i3SdkDemo.aps  i3SdkSampleApp.aps  i3SdkSampleApp.cpp  i3SdkSampleApp.h  i3SdkSampleApp.rc  i3SdkSampleApp.vcxproj  i3SdkSampleAppDlg.cpp  i3SdkSampleAppDlg.h  resource.h  stdafx.h
sdk/i3SdkSampleApp/res/: i3SdkSampleApp.rc2
src/: main.cc  temp_cam.cc  temp_cam.h
